--- a/index.html
+++ b/index.html
@@ -7,86 +7,39 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center d-flex flex-column align-items-center justify-content-center vh-100">
+        <h1 class="text-white mb-4">CALCULATOR</h1>
         <div class="cal">
-            <input type="text" class="cal-scr" disabled placeholder="0">
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">7</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">8</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">9</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-light">÷</button>
-                    </div>
-                    </div>
+            <input type="text" class="cal-scr" value="" disabled placeholder="0">
+            <div class="row gx-2 gy-2"> 
+                <div class="col-3"><button type="button" class="btn btn-dark" value="7">7</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="8">8</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="9">9</button></div>
+                <div class="col-3"><button type="button" class="btn btn-info" value="/">/</button></div>
+
+                <div class="col-3"><button type="button" class="btn btn-dark" value="4">4</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="5">5</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="6">6</button></div>
+                <div class="col-3"><button type="button" class="btn btn-info" value="*">*</button></div>
+
+                <div class="col-3"><button type="button" class="btn btn-dark" value="1">1</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="2">2</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="3">3</button></div>
+                <div class="col-3"><button type="button" class="btn btn-info" value="-">-</button></div>
+
+                <div class="col-3"><button type="button" class="btn btn-dark" value="0">0</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value=".">.</button></div>
+                <div class="col-3"><button type="button" class="btn btn-dark" value="00">00</button></div>
+                <div class="col-3"><button type="button" class="btn btn-info" value="+">+</button></div>
             </div>
-            <div class="container">
-                <div class="row row-cols-4">
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">4</button>
-                </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">5</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-dark">6</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-light">×</button>
-                    </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <button type="button" class="btn btn-dark">1</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-dark">2</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-dark">3</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-light">-</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <button type="button" class="btn btn-dark">0</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-dark">.</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-danger">C</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-light">+</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="equal">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col">
-                                <button type="button" class="btn btn-primary">=</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="row gx-2 gy-2 mt-2">
+                <div class="col-6"><button type="button" class="btn btn-danger w-100" value="C">C</button></div>
+                <div class="col-6"><button type="button" class="btn btn-primary w-100" value="=">=</button></div>
             </div>
         </div>
+    </div>
 </body>
 </html>
